--- a/about.html
+++ b/about.html
@@ -193,7 +193,7 @@ I principali Committenti di IG sono costituiti da Enti Pubblici, Enti a partecip
                     <h6 class="text-white text-uppercase mb-4">Design. Build. Live.</h6>
             </div>
             <div class="py-4 px-5 text-center text-md-end">
-                <p class="mb-0">&copy; <a class="text-primary" href="#">smartingegneria.it</a>. All Rights Reserved 2023</p>
+                <p class="mb-0">&copy; <a class="text-primary" href="#">studiodaka@outlook.it</a>. All Rights Reserved 2023</p>
                 <p class="mb-0">Designed by <a class="text-primary" href="#">ZOSKALES</a></p>
             </div>
     </div>   
