--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
     <div class="container-fluid py-6 px-5">
         <div class="row g-5">
             <div class="col-lg-7">
-                <h1 class="display-5 text-uppercase mb-4">We are <span class="text-primary">nessuno</span> in questo campo , ma lo diventiamo one day!!!</h1>
+                <h1 class="display-5 text-uppercase mb-4">Elevata competenza <span class="text-primary">professionale</span>,  esperienza multidisciplinare di livello avanzato nel campo dell'ingegneria.!!!</h1>
                 <h4 class="text-uppercase mb-3 text-body">Ingegneria Geotecnica srl, IG, è una società specializzata nell'ambito dell'ingegneria geotecnica, della geologia applicata, dell'ingegneria sismica e dell'ingegneria ambientale.</h4>
                 <p>Ingegneria Geotecnica srl, IG, è una società specializzata nell'ambito dell'ingegneria geotecnica, della geologia applicata, dell'ingegneria sismica e dell'ingegneria ambientale.
 Le attività che IG svolge sono di consulenza, progettazione, direzione dei lavori e coordinamento della sicurezza in fase di progettazione e di esecuzione dei lavori, grazie al suo staff di ingegneri e professionisti operanti nel campo.
