--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@ I principali Committenti di IG sono costituiti da Enti Pubblici, Enti a partecip
                         </div>
                     </div>
                 </div>
+                 <div class="carousel-item">
+                    <img class="w-100" src="img/ponte.jpg" alt="Image">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="p-3" style="max-width: 900px;">
+                            <h1 class="display-2 text-uppercase text-white mb-md-4">coming soon </h1>
+                        </div>
+                    </div>
+                </div>
+               
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel"
                 data-bs-slide="prev">
