--- a/service.html
+++ b/service.html
@@ -70,8 +70,8 @@
                         <i class="fa fa-3x fa-building text-primary"></i>
                     </div>
                     <div class="px-4 pb-4">
-                        <h4 class="text-uppercase mb-3">Building Construction</h4>
-                        <p>Duo dolore et diam sed ipsum stet amet duo diam. Rebum amet ut amet sed erat sed sed amet magna elitr amet kasd diam duo</p>
+                        <h4 class="text-uppercase mb-3">Progettazione Strutturale</h4>
+                        <p>Utilizziamo una vasta esperienza e conoscenza approfondita nel calcolo strutturale statico e sismico per offrire consulenze e progettazioni di ogni livello. Gestiamo sia in modo integrato che separato una varietà di materiali strutturali, tra cui cemento armato, acciaio da carpenteria, muratura e legno ad uso strutturale.</p>
                         <a class="btn text-primary" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
