--- a/service.html
+++ b/service.html
@@ -71,7 +71,13 @@
                     </div>
                     <div class="px-4 pb-4">
                         <h4 class="text-uppercase mb-3">Progettazione Strutturale</h4>
-                        <p>Utilizziamo una vasta esperienza e conoscenza approfondita nel calcolo strutturale statico e sismico per offrire consulenze e progettazioni di ogni livello. Gestiamo sia in modo integrato che separato una varietà di materiali strutturali, tra cui cemento armato, acciaio da carpenteria, muratura e legno ad uso strutturale.</p>
+                        <p>Utilizziamo una vasta esperienza e conoscenza approfondita nel calcolo strutturale statico e sismico per offrire consulenze e 
+                           progettazioni di ogni livello. Gestiamo sia in modo integrato che separato una varietà di materiali strutturali, tra cui cemento armato,
+                           acciaio da carpenteria, muratura e legno ad uso strutturale.
+                           Daka ha una solida esperienza in diversi settori, tra cui opere di sostegno del terreno, regolamentazione idrica, trasporti, 
+                           edilizia residenziale sia pubblica che privata, oltre a costruzioni di edifici e strutture per attività industriali, infrastrutture 
+                           e ponti di varie forme e tipologie
+                        </p>
                         <a class="btn text-primary" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
