--- a/service.html
+++ b/service.html
@@ -89,8 +89,19 @@
                         <i class="fa fa-3x fa-home text-primary"></i>
                     </div>
                     <div class="px-4 pb-4">
-                        <h4 class="text-uppercase mb-3">House Renovation</h4>
-                        <p>Duo dolore et diam sed ipsum stet amet duo diam. Rebum amet ut amet sed erat sed sed amet magna elitr amet kasd diam duo</p>
+                        <h4 class="text-uppercase mb-3">Settore Edile ed Architettonico</h4>
+                        <p>Nel Settore Edile ed Architettonico si offre consulenza integrata con attività di progettazione che si articolano in varie fasi 
+                           a partire dal coinvolgimento attivo della committenza, al fine di definire obiettivi ed esigenze specifiche.
+
+                           Lo studio tecnico ed economico dei materiali idonei al risparmio energetico ed al comfort ambientale pone le basi per
+                           lo sviluppo delle successive fasi progettuali fino a quella esecutiva completa di capitolati speciali d’appalto e computi metrici di dettaglio.
+
+                           Il Settore persegue la strategia del Gruppo fortemente orientata alla ricerca e sviluppo di soluzioni tecnologicamente innovative
+                           tramite l’utilizzo di una piattaforma BIM destinata a  fornire ai nostri Clienti un prodotto utile per governare tutti i processi 
+                           a qualsiasi stadio assicurando il controllo e monitoraggio puntuale della realizzazione di un’opera.
+                        DAKA ha fatto significativi investimenti nella progettazione BIM, manifestando una ferma fiducia nelle sue potenzialità. Ha istituito un team di operatori BIM 
+                           supportati costantemente da esperti progettisti senior specializzati in diverse aree.</p>
+                       
                         <a class="btn text-primary" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
@@ -102,8 +113,18 @@
                         <i class="fa fa-3x fa-drafting-compass text-primary"></i>
                     </div>
                     <div class="px-4 pb-4">
-                        <h4 class="text-uppercase mb-3">Architecture Design</h4>
-                        <p>Duo dolore et diam sed ipsum stet amet duo diam. Rebum amet ut amet sed erat sed sed amet magna elitr amet kasd diam duo</p>
+                        <h4 class="text-uppercase mb-3">IMPIANTISTICA CIVILE E INDUSTRIALE</h4>
+                        <p>Studio Daka tramite il Settore Impianti Tecnologici possiede un completo know-how multidisciplinare per tutte le 
+                           soluzioni specifiche o integrate nelle realizzazioni civili ed industriali.
+                      
+                           La consulenza impiantistica è integrata con gli altri settori di competenza dello studio ed è orientata all’utilizzo di nuove tecnologie per la progettazione, 
+                           assistendo ed integrando la modellazione 3D in ambiente BIM con le potenzialità del MEP relativo all’impiantistica meccanica, elettrica e idraulica. 
+                           Con questo approccio il Settore lavora costantemente a contatto con il mondo dei costruttori e degli installatori, recependo in modo reattivo
+                           le evoluzioni della tecnica e i nuovi orizzonti aperti dalla scienza dei materiali. In questa direzione, nel corso degli anni sono stati condotti notevoli investimenti in competenza, 
+                           formazione e software specialistici per le risorse preposte.
+
+                           Lo sviluppo del settore Impianti in edilizia va a coprire le aree classiche della progettazione tecnologica quali il settore elettrico, 
+                           HVAC, fluido-dinamico, idraulico-sanitario e di efficientamento energetico.</p>
                         <a class="btn text-primary" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
@@ -115,8 +136,12 @@
                         <i class="fa fa-3x fa-palette text-primary"></i>
                     </div>
                     <div class="px-4 pb-4">
-                        <h4 class="text-uppercase mb-3">Interior Design</h4>
-                        <p>Duo dolore et diam sed ipsum stet amet duo diam. Rebum amet ut amet sed erat sed sed amet magna elitr amet kasd diam duo</p>
+                        <h4 class="text-uppercase mb-3">PREVENZIONE INCENDI, PROGETTAZIONE ANTINCENDIO, FIRE SAFETY ENGINEERING</h4>
+                        <p>riunisce nel settore Antincendio expertise e professionalità interne al Gruppo provenienti dagli ambiti dell’ingegneria strutturale, 
+                           civile ed impiantistica con lo scopo di offrire una consulenza trasversale ed integrata in materia di prevenzione incendi.è in grado
+                           di costruire soluzioni per attività industriali, residenziali e del terziario basate sull’approccio sia prescrittivo che prestazionale,
+                           ricorrendo in modo scientifico ai metodi della Fire Safety Engineering laddove l’applicazione dei metodi ingegneristici possa individuare 
+                           scenari nuovi rispetto alle regole verticali.</p>
                         <a class="btn text-primary" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
@@ -128,8 +153,15 @@
                         <i class="fa fa-3x fa-tools text-primary"></i>
                     </div>
                     <div class="px-4 pb-4">
-                        <h4 class="text-uppercase mb-3">che ne sooooo</h4>
-                        <p>Duo dolore et diam sed ipsum stet amet duo diam. Rebum amet ut amet sed erat sed sed amet magna elitr amet kasd diam duo</p>
+                        <h4 class="text-uppercase mb-3">COORDINAMENTO SICUREZZA</h4>
+                        <p>lo studio DAKAgrazie ad uno staff di ingegneri specializzati nel settore Sicurezza, 
+                           risponde alle esigenze di Committenti sia pubblici che privati offrendo un servizio qualificato
+                           ed un approccio competente volto alla prevenzione dei rischi ai sensi dalle normative vigenti ed in particolare del D.Lgs. 81/08.
+
+
+                           Il Gruppo segue attività di coordinamento per la sicurezza in fase di progettazione ed esecuzione presso importanti stabilimenti produttivi sul territorio nazionale,
+                           occupandosi anche di consulenze nell’ambito della Sicurezza sui luoghi di lavoro attraverso attività specialistiche inerenti la valutazione di rischio sismico,
+                           statico e vulcanico finalizzate alla redazione di DVR specialistici in applicazione del D.Lgs. 81/08.</p>
                         <a class="btn text-primary" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
