--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         <div class="row g-5">
             <div class="col-lg-7">
                 <h1 class="display-5 text-uppercase mb-4">We are <span class="text-primary">nessuno</span> in questo campo , ma lo diventiamo one day!!!</h1>
-                <h4 class="text-uppercase mb-3 text-body">Ingegneria Geotecnica srl, IG, è una società specializzata nell'ambito dell'ingegneria geotecnica, della geologia applicata, dell'ingegneria sismica e dell'ingegneria ambientale.</h4>
-                <p>Ingegneria Geotecnica srl, IG, è una società specializzata nell'ambito dell'ingegneria geotecnica, della geologia applicata, dell'ingegneria sismica e dell'ingegneria ambientale.
-Le attività che IG svolge sono di consulenza, progettazione, direzione dei lavori e coordinamento della sicurezza in fase di progettazione e di esecuzione dei lavori, grazie al suo staff di ingegneri e professionisti operanti nel campo.
-Inoltre, la Società si avvale della collaborazione di docenti universitari di fama internazionale e di professionisti di comprovata esperienza che partecipano in modo continuativo e sistematico allo svolgimento degli incarichi.
-I principali Committenti di IG sono costituiti da Enti Pubblici, Enti a partecipazione pubblica e privata, Imprese Costruttrici e Società di Ingegneria.</p>
+                <h4 class="text-uppercase mb-3 text-body">Società di ingegneria strutturata per offrire la gamma completa di servizi di ingegneria</h4>
+                <p> DAKA Studio è una Società di Ingegneria altamente specializzata con sede dello studio di Progettazione a Torino.
+                   Ci distinguiamo prevalentemente nell’Ingegneria Civile e nella Progettazione Strutturale ed Energetica, con competenze chiave nel settore della Sicurezza Edile.
+                    La nostra attività abbraccia anche le Ristrutturazioni Civili e Commerciali, fornendo un servizio completo che spazia dalla progettazione architettonica alla consegna finale dei lavori.
+                </p>
                 <div class="row gx-5 py-2">
                     <div class="col-sm-6 mb-2">
                         <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Perfect Planning</p>
