--- a/index.html
+++ b/index.html
@@ -71,16 +71,22 @@
                    La nostra attività abbraccia anche le Ristrutturazioni Civili e Commerciali, fornendo un servizio completo che spazia 
                    dalla progettazione architettonica alla consegna finale dei lavori.
                 </p>
+
+
+St
+
+
+               
                 <div class="row gx-5 py-2">
                     <div class="col-sm-6 mb-2">
-                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Perfect Planning</p>
-                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Professional Workers</p>
-                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>che cazz'ne so </p>
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Studi di fattibilità</p>
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Preventivi</p>
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Rilievi topografici in cantiere ed inizio lavori </p>
                     </div>
                     <div class="col-sm-6 mb-2">
-                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>che cazz'ne so  </p>
-                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>che cazz'ne so </p>
-                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>che cazz'ne so </p>
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Rendering</p>
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Elaborati grafici (Tavole di progetto) </p>
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Utilizzo BIM (Building Information Modeling)</p>
                     </div>
                 </div>
                 <p class="mb-4">Ingegneria Geotecnica srl, IG, è una società specializzata nell'ambito dell'ingegneria geotecnica, della geologia applicata, dell'ingegneria sismica e dell'ingegneria ambientale.</p>
