--- a/index.html
+++ b/index.html
@@ -72,20 +72,24 @@
                    dalla progettazione architettonica alla consegna finale dei lavori.
                 </p>
 
-
-St
-
-
                
                 <div class="row gx-5 py-2">
                     <div class="col-sm-6 mb-2">
                         <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Studi di fattibilità</p>
                         <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Preventivi</p>
                         <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Rilievi topografici in cantiere ed inizio lavori </p>
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Elaborati grafici (Tavole di progetto) </p>
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Relazioni tecniche</p>
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Computo metrico estimativo</p>
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Elaborati grafici (Tavole di progetto) </p>
+                         <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Computo metrico estimativo</p>
                     </div>
                     <div class="col-sm-6 mb-2">
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Quadro economico di progetto</p>
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Cronoprogramma</p>
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Piano preliminare di manutenzione</p>
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>iano particellare delle aree espropriande o da acquisire</p>
                         <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Rendering</p>
-                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Elaborati grafici (Tavole di progetto) </p>
                         <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Utilizzo BIM (Building Information Modeling)</p>
                     </div>
                 </div>
@@ -109,7 +113,7 @@ St
                 <div class="carousel-item active">
                     <img class="w-100" src="img/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
+                        <div class="p-3" style="max-width: 500px;">
                             <h1 class="display-2 text-uppercase text-white mb-md-4">get rich or die tryin</h1>
                         </div>
                     </div>
@@ -117,7 +121,7 @@ St
                 <div class="carousel-item">
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
+                        <div class="p-3" style="max-width: 500px;">
                             <h1 class="display-2 text-uppercase text-white mb-md-4">coming soon </h1>
                         </div>
                     </div>
@@ -125,7 +129,7 @@ St
                  <div class="carousel-item">
                     <img class="w-100" src="img/ponte.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
+                        <div class="p-3" style="max-width: 500px;">
                             <h1 class="display-2 text-uppercase text-white mb-md-4">coming soon </h1>
                         </div>
                     </div>
@@ -134,7 +138,7 @@ St
                <div class="carousel-item">
                     <img class="w-100" src="img/rio1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
+                        <div class="p-3" style="max-width: 500px;">
                             <h1 class="display-2 text-uppercase text-white mb-md-4">coming soon </h1>
                         </div>
                     </div>
@@ -142,7 +146,7 @@ St
                <div class="carousel-item">
                     <img class="w-100" src="img/rio2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
+                        <div class="p-3" style="max-width: 500px;">
                             <h1 class="display-2 text-uppercase text-white mb-md-4">coming soon </h1>
                         </div>
                     </div>
