--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Quadro economico di progetto</p>
                         <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Cronoprogramma</p>
                         <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Piano preliminare di manutenzione</p>
-                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>iano particellare delle aree espropriande o da acquisire</p>
+                        <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Piano particellare delle aree espropriande o da acquisire</p>
                         <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Rendering</p>
                         <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Utilizzo BIM (Building Information Modeling)</p>
                     </div>
