--- a/service.html
+++ b/service.html
@@ -114,17 +114,13 @@
                     </div>
                     <div class="px-4 pb-4">
                         <h4 class="text-uppercase mb-3">IMPIANTISTICA CIVILE E INDUSTRIALE</h4>
-                        <p>Studio Daka tramite il Settore Impianti Tecnologici possiede un completo know-how multidisciplinare per tutte le 
-                           soluzioni specifiche o integrate nelle realizzazioni civili ed industriali.
-                      
-                           La consulenza impiantistica è integrata con gli altri settori di competenza dello studio ed è orientata all’utilizzo di nuove tecnologie per la progettazione, 
-                           assistendo ed integrando la modellazione 3D in ambiente BIM con le potenzialità del MEP relativo all’impiantistica meccanica, elettrica e idraulica. 
-                           Con questo approccio il Settore lavora costantemente a contatto con il mondo dei costruttori e degli installatori, recependo in modo reattivo
-                           le evoluzioni della tecnica e i nuovi orizzonti aperti dalla scienza dei materiali. In questa direzione, nel corso degli anni sono stati condotti notevoli investimenti in competenza, 
-                           formazione e software specialistici per le risorse preposte.
+                        <p>Studio Daka tramite il Settore Impianti Tecnologici possiede un completo know-how multidisciplinare per tutte le soluzioni specifiche o integrate nelle realizzazioni civili. La consulenza impiantistica è integrata con gli altri settori di competenza dello studio ed è orientata all’utilizzo di nuove tecnologie per la progettazione, assistendo ed integrando la modellazione 3D in ambiente BIM con le potenzialità del MEP relativo all’impiantistica meccanica, elettrica e idraulica. Con questo approccio, il Settore lavora costantemente a contatto con il mondo dei costruttori e degli installatori, recependo in modo reattivo le evoluzioni della tecnica e i nuovi orizzonti aperti dalla scienza dei materiali. 
 
-                           Lo sviluppo del settore Impianti in edilizia va a coprire le aree classiche della progettazione tecnologica quali il settore elettrico, 
-                           HVAC, fluido-dinamico, idraulico-sanitario e di efficientamento energetico.</p>
+Lo sviluppo del settore Impianti in edilizia va a coprire le aree classiche della progettazione tecnologica quali il settore elettrico, HVAC, fluido-dinamico, idrico-sanitario e di efficientamento energetico. Inoltre, lo studio dedica particolare attenzione alla redazione di Attestati di Prestazione Energetica (APE), fornendo analisi dettagliate sulla prestazione energetica degli edifici, conforme alle normative vigenti.
+
+La modellazione energetica, integrata nel nostro approccio, ci consente di valutare con precisione l'impatto delle soluzioni impiantistiche sulla performance energetica complessiva dell'edificio. Questo ci permette di ottimizzare i progetti, garantendo non solo l'efficienza dei singoli impianti, ma anche una gestione sostenibile delle risorse energetiche.
+
+In conclusione, Studio Daka si posiziona come un punto di riferimento nell'ambito della progettazione integrata degli impianti, offrendo soluzioni all'avanguardia che incorporano tecnologie innovative, una formazione continua delle risorse e una profonda conoscenza delle normative energetiche e ambientali.</p>
                         <a class="btn text-primary" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
