--- a/service.html
+++ b/service.html
@@ -113,7 +113,7 @@
                         <i class="fa fa-3x fa-drafting-compass text-primary"></i>
                     </div>
                     <div class="px-4 pb-4">
-                        <h4 class="text-uppercase mb-3">IMPIANTISTICA CIVILE E INDUSTRIALE</h4>
+                        <h4 class="text-uppercase mb-3">IMPIANTISTICA CIVILE </h4>
                         <p>Studio Daka tramite il Settore Impianti Tecnologici possiede un completo know-how multidisciplinare per tutte le soluzioni specifiche o integrate nelle realizzazioni civili. La consulenza impiantistica è integrata con gli altri settori di competenza dello studio ed è orientata all’utilizzo di nuove tecnologie per la progettazione, assistendo ed integrando la modellazione 3D in ambiente BIM con le potenzialità del MEP relativo all’impiantistica meccanica, elettrica e idraulica. Con questo approccio, il Settore lavora costantemente a contatto con il mondo dei costruttori e degli installatori, recependo in modo reattivo le evoluzioni della tecnica e i nuovi orizzonti aperti dalla scienza dei materiali. 
 
 Lo sviluppo del settore Impianti in edilizia va a coprire le aree classiche della progettazione tecnologica quali il settore elettrico, HVAC, fluido-dinamico, idrico-sanitario e di efficientamento energetico. Inoltre, lo studio dedica particolare attenzione alla redazione di Attestati di Prestazione Energetica (APE), fornendo analisi dettagliate sulla prestazione energetica degli edifici, conforme alle normative vigenti.
